Fix image width on tablet resolution

--- a/custom/style/mozfr.scss
+++ b/custom/style/mozfr.scss
@@ -383,8 +383,9 @@ article {
   }
   img, iframe, .image {
     max-width: 100%;
+
     @media screen and (max-width: $tablet) {
-      max-width: $tablet;
+      max-width: 100%;
     }
     @media screen and (max-width: $smartphoneHor) {
       max-width: 100%;
